// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating string property with minimum length greater than maximum length should have validation failures 1`] = `"String Property StringIdentity has min length greater than max length."`;

exports[`when validating string property with minimum length greater than maximum length should have validation failures 2`] = `
Object {
  "column": 6,
  "line": 9,
  "tokenText": "min length",
}
`;

exports[`when validating string property with minimum length greater than maximum length should have validation failures 3`] = `"String Property StringProperty has min length greater than max length."`;

exports[`when validating string property with minimum length greater than maximum length should have validation failures 4`] = `
Object {
  "column": 6,
  "line": 15,
  "tokenText": "min length",
}
`;
